--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-expand-lg border-bottom navbar-light bg-light">
+<nav class="navbar  navbar-expand-lg border-bottom navbar-light bg-light">
     <div class="container">
 
         <img class="me-3" src="{{data.img}}" alt="" width="40" height="34">
         <a class="navbar-brand" href="#">{{data.name}}</a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        <button class="navbar-toggler button_color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -13,7 +13,7 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
                 {{#each data.link}}
-                <li class="nav-item">
+                <li class="nav-item bold_hover">
                     <a class="nav-link active" aria-current="page" href="{{this.url}}">{{this.label}}</a>
                 </li>
                 {{/each}}
