--- a/views/partials/slider.hbs
+++ b/views/partials/slider.hbs
@@ -6,7 +6,7 @@
   </div>
   <div class="carousel-inner">
   
-  {{#each slide}}
+  {{#each slide.data}}
     <div class="carousel-item {{this.class}}">
       <img src="{{this.img}}" class="d-block w-100 slider_img" alt="img1">
       <div class="carousel-caption d-none d-md-block">
