--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,7 +1,7 @@
 <nav class="navbar  navbar-expand-lg border-bottom navbar-light bg-light">
     <div class="container">
 
-        <img class="me-3" src="{{data.img}}" alt="" width="40" height="34">
+        <img class="me-3" src="{{data.img}}" alt="" width="auto" height="auto">
         <a class="navbar-brand" href="#">{{data.name}}</a>
 
         <button class="navbar-toggler button_color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
